--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,4 +1,13 @@
 {
+  "name": "cloud-mern-azure-frontend",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
     "axios": "^1.13.2",
     "react": "^19.2.1",
